--- a/web/package.json
+++ b/web/package.json
@@ -6,10 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
+    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@opennextjs/cloudflare": "^1.1.0",
     "@tanstack/react-query": "^5.77.2",
     "@uidotdev/usehooks": "^2.4.1",
     "lucide-react": "^0.511.0",
@@ -32,6 +36,7 @@
     "eslint-config-next": "14.2.17",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wrangler": "^4.19.1"
   }
 }
