--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web:dev": "pnpm --filter web dev",
     "web:build": "pnpm --filter web build",
     "web:preview": "pnpm --filter web preview",
-    "web:deploy": "pnpm --filter web deploy",
+    "web:cf-deploy": "pnpm --filter web cf-deploy",
     "web:cf-typegen": "pnpm --filter web cf-typegen"
   },
   "keywords": [],
