--- a/web/wrangler.jsonc
+++ b/web/wrangler.jsonc
@@ -6,5 +6,17 @@
   "assets": {
     "directory": ".open-next/assets",
     "binding": "ASSETS"
+  },
+  "vars": {
+    "NEXT_PUBLIC_API_URL": "http://127.0.0.1:3001",
+    "OAUTH2_GOOGLE_CALLBACK_URL": "http://localhost:3000/oauth2/google/callback"
+  },
+  "env": {
+    "production": {
+      "vars": {
+        "NEXT_PUBLIC_API_URL": "https://api.usetextify.com",
+        "OAUTH2_GOOGLE_CALLBACK_URL": "https://usetextify.com/oauth2/google/callback"
+      }
+    }
   }
 }
