--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@opennextjs/cloudflare": "^1.1.0",
+    "@serwist/next": "^9.0.14",
     "@tanstack/react-query": "^5.77.2",
     "@uidotdev/usehooks": "^2.4.1",
     "lucide-react": "^0.511.0",
@@ -35,6 +36,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.17",
     "postcss": "^8",
+    "serwist": "^9.0.14",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "wrangler": "^4.19.1"
