fix: callback url

--- a/web/wrangler.jsonc
+++ b/web/wrangler.jsonc
@@ -8,8 +8,8 @@
     "binding": "ASSETS"
   },
   "vars": {
-    "NEXT_PUBLIC_API_URL": "http://127.0.0.1:3001",
-    "OAUTH2_GOOGLE_CALLBACK_URL": "http://localhost:3000/oauth2/google/callback"
+    "NEXT_PUBLIC_API_URL": "https://api.usetextify.com",
+    "OAUTH2_GOOGLE_CALLBACK_URL": "https://usetextify.com/oauth2/google/callback"
   },
   "env": {
     "production": {
