--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "@serwist/next": "^9.0.14",
     "@tanstack/react-query": "^5.77.2",
     "@uidotdev/usehooks": "^2.4.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.511.0",
     "next": "14.2.17",
     "pocketbase": "^0.26.0",
