--- a/cron/package.json
+++ b/cron/package.json
@@ -15,14 +15,18 @@
   "packageManager": "pnpm@10.11.0",
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.17.50",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.56.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "multer": "^2.0.1",
     "openai": "^5.3.0",
-    "zod": "^3.25.32"
+    "zod": "^3.25.32",
+    "zod-to-json-schema": "^3.24.6"
   }
 }
