--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.56.0",
     "@hookform/resolvers": "^5.0.1",
     "@opennextjs/cloudflare": "^1.1.0",
     "@serwist/next": "^9.0.14",
@@ -26,7 +27,8 @@
     "react-hook-form": "^7.56.4",
     "tailwind-merge": "^3.3.0",
     "tailwind-scrollbar-hide": "^2.0.0",
-    "zod": "^3.25.32"
+    "zod": "^3.25.32",
+    "zod-to-json-schema": "^3.24.6"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.78.0",
